dataset1235/2025-2/2318198438/users/867892000/executions/1897677159_4233865845.log
== RUN (2025-08-20 23:59:49)
-- CODE: 
c = float(input(""))
f = c * (9/5) + 32
print(round(f ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:58:58)
-- CODE: 
c = float(input(""))
f = c * (9/5) + 32
print(round(f ,))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:59:23)
-- CODE: 
c = float(input(""))
f = c * (9/5) + 32
print(round(f ,))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:59:39)
-- CODE: 
c = float(input(""))
f = c * (9/5) + 32
print(round(f ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:59:55)
-- CODE: 
c = float(input(""))
f = c * (9/5) + 32
print(round(f ,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:58:33)
-- CODE: 
f = c * (9/5) + 32
print(round(f ,))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    f = c * (9/5) + 32
        ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
